--- a/OOP/pom.xml
+++ b/OOP/pom.xml
@@ -15,6 +15,12 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-beta7</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
